# pdm-packer

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
news/: 000.feature.md  12.bugfix.md  12.feature.md  14.bugfix.md  15.bugfix.md  20.bugfix.md  24.bugfix.md  31.feature.md  35.bugfix.md  4.feature.md  44.bugfix.md  47.bugfix.md  48.feature.md  50.dep.md  51.removal.md  52.misc.md  7.feature.md  9.feature.md
src/pdm_packer/: __init__.py  _compile_source.py  command.py  env.py  plugin.py
tasks/: bump_version.py
tests/: __init__.py  conftest.py  test_core.py  test_packer.py
